# speculative-decoding

./: .gitignore  README.md  analyze.py  custom_train.py  eval_spec_bench.py  main.py  pyproject.toml  test.py  utils.py
decoding/: __init__.py  ar.py  base.py  cache.py  dtree.py  eagle.py  eagle_model.py  hf.py  pld.py  recycle.py  stat.py  utils.py
spec_bench/: question.jsonl  test.jsonl
